# rust-vcd-ts

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: errors.rs  file_provider.rs  lib.rs
test/: load_vcd.ts  test.vcd
