[package]
name = "rust-vcd-ts"
version = "0.1.0"
edition = "2024"
authors = ["Zeilenschubser <zeilenschubser@gmail.com>"]
repository = "not_hosted_yet"
description = "Read and write VCD (Value Change Dump) files in TS through wasm32"
license = "MIT"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.219"
serde_json = "1.0.143"
tsify = "0.5.5"
vcd = "0.7.0"
wasm-bindgen = "0.2.101"
wasm-bindgen-console-logger = "0.1.1"
web-sys = "0.3.78"

[lib]
crate-type = ["cdylib"]
